# xstalker

./: Cargo.toml  README.md  Readme.md  classifier  test
rust/: Cargo.toml
rust/src/: main.rs  xcb_stalker.rs
src/: active_window.rs  classifier.rs  database.rs  main.rs  star.rs  utils.rs  xcb_stalker.rs
src/old/: database.rs  xcb_stalker.rs
xstalker/: __init__.py  stats.py  util.py  xcb_backend.py
