[package]
name = "xstalker"
version = "0.1.0"
authors = ["François Gindraud <francois.gindraud@gmail.com>"]
description = "Tracks time spent on the computer, according to user defined categories"
edition = "2018"

[dependencies]
tokio = "0.1"
xcb = "^0.9"
chrono = "^0.4"
clap = "^2"

[dependencies.mio]
version = "^0.7"
features = ["os-util"]
