[package]
name = "xstalker"
version = "0.1.0"
authors = ["François Gindraud <francois.gindraud@gmail.com>"]
description = "Tracks time spent on the computer, according to user defined categories"
edition = "2018"

[dependencies]
# Async framework
libc = "^0.2"
# Application
xcb = "^0.9"
anyhow = "^1"
gumdrop = "^0.8"